add environment to tasks

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -6,6 +6,11 @@
     "isShellCommand": true,
     "args": [],
     "showOutput": "always",
+    "options": {
+        "env": {
+            "GOPATH": "/home/klauer/dev/go"           
+        }
+    },
     "tasks": [
         {
             "args": [
